After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 541699 - Autoscroll scrolls even if no one is looking
Autoscroll scrolls even if no one is looking
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal minor
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2008-07-05 18:56 UTC by gwern
Modified: 2014-03-01 11:01 UTC
See Also:
GNOME target: ---
GNOME version: 2.21/2.22


Attachments
Proposed patch (3.76 KB, patch)
2013-12-20 10:31 UTC, Robert Roth
reviewed Details | Review
Stop autoscrolling when view looses focus (1.83 KB, patch)
2014-02-28 10:09 UTC, Anuj Khare
reviewed Details | Review

Description gwern 2008-07-05 18:56:58 UTC
Please describe the problem:
I noticed that when you have autoscroll on, and you navigate away from the Evince window (removing focus or visibility, or both), autoscroll seems to continue to scroll on anyway.

This seems kind of silly to me. If no one is using it (it has no focus), or if no one can even *see* it (no visibility), then why is it scrolling? All it does is disconcert someone who perchance navigates away for a time. No doubt there is some passing rare circumstance in which this is a useful behavior, but I misdoubt greatly that it is common enough to make sense as a default.

Steps to reproduce:
1. 
2. 
3. 


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Nickolay V. Shmyrev 2008-07-05 19:02:34 UTC
Agree.
Comment 2 Robert Roth 2013-12-20 10:31:58 UTC
Created attachment 264606 [details] [review]
Proposed patch

On window focus lost pause autoscrolling if started, and on window focused again continue scrolling.
Comment 3 Carlos Garcia Campos 2014-02-23 18:08:56 UTC
Review of attachment 264606 [details] [review]:

Thanks for the patch, it makes a lot of sense. However, I wonder whether we actually need new public API for that. Maybe the view could connect to focus in/out of the toplevel window and pause/resume the autoscroll internally.
Comment 4 Anuj Khare 2014-02-28 10:09:36 UTC
Created attachment 270547 [details] [review]
Stop autoscrolling when view looses focus

I have used the view focus in/out to start/stop autoscrolling.

Kindly review.
Comment 5 Carlos Garcia Campos 2014-03-01 11:00:42 UTC
Review of attachment 270547 [details] [review]:

Thanks for the patch. I liked the idea of Robert's patch of adding pause/resume methods, since we don't actually want to stop/start the autoscroll and that way we don't need another boolean to know whether scroll is paused. I've merged both patches and pushed them to git master. Thank you both.