libview: Stop autoscrolling when view looses focus

This patch is a merge of two patches written by Robert Roth and Anuj
Khare.

https://bugzilla.gnome.org/show_bug.cgi?id=541699